Changelog:

V1.11 October X, 2016

	* Heatbed will start heating up after moving extruder into the wipe corner

V1.10 October 25, 2016

	* Incorporates model viewer into OctoPrint
	* All controls go back to their default behaviour when not using a Micro 3D printer
	* Positioning a model now works with printer profiles that have a circular form factor or a center origin
	* Model editor displays cylindrical printing area when printer profile has a circular form factor
	* Added grid display to model editor that matches up with the same positioning as the G-code viewer and model viewer grids
	* Fixed performing standby command when finishing or canceling a print with OctoPrint 1.3.x
	* Changed readme to show how M33 Fio isn't just for people using a Micro 3D printer

V1.9 October 20, 2016

	* Provides iMe V00.00.01.23 printer firmware
	* Added options for solid layer fill patterns when using Slic3r. Thanks again ra100!
	* Fixed OS X installer to work with OS X V10.12
	* Removed homing before a print in the preparation pre-processor stage when using iMe firmware
	* Allows disabling sleep and slicer reminders
	* Fixed compatibility with Internet Explorer 11
	* Added the ability to drag and drop files onto the profile and model editors to load the profile or import the model
	* Model editor can now display an axes indicator in the from left corner to better see the orientation of the bed
	* Micro 3D profile and slicer profiles will be removed if not using a Micro 3D printer and added if using a Micro 3D printer
	* Webcam server no longer requires OctoPrint to be restarted for its changed settings to take affect
	* Fixed an issue with the EEPROM manager that occurs when converting newline and carriage return characters from ASCII to decimal or hexadecimal values
	* OctoPrint's available serial ports will now update in real-time

V1.8 September 22, 2016

	* Provides iMe V00.00.01.22 printer firmware