@@ -1,0 +1,22 @@
+# This file is for unifying the coding style for different editors and IDEs
+# editorconfig.org
+
+root = true
+
+[*]
+end_of_line = lf
+charset = utf-8
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[**.py]
+indent_style = tab
+
+[**.js]
+indent_style = tab
+
+[**.h]
+indent_style = tab
+
+[**.cpp]
+indent_style = tab
