@@ -1,0 +1,6 @@
+[python: */**.py]
+[jinja2: */**.jinja2]
+extensions=jinja2.ext.autoescape, jinja2.ext.with_
+
+[javascript: */**.js]
+extract_messages = gettext, ngettext
