@@ -1,5 +1,5 @@
 <select>
-	<option value="new" disabled>New</option>
-	<option value="close" disabled>Close</option>
+	<option value="new" disabled>{{_("New")}}</option>
+	<option value="close" disabled>{{_("Close")}}</option>
 </select>
 <a></a>
