@@ -1,6 +1,6 @@
 <form class="form-horizontal">
 	<div class="control-group title">
-		<h4>General</h4>
+		<h4>{{_("General")}}</h4>
 	</div>
 	<div class="control-group">
 		<div class="controls">
