@@ -25,6 +25,12 @@ fi
 find ./ -name '*~' -print0 | xargs -0 rm
 find ./ -name '*.pyc' -print0 | xargs -0 rm
 
+# Update bundled translations
+python setup.py babel_refresh
+pybabel compile -d translations
+python setup.py babel_bundle --locale=
+find "octoprint_m33fio/translations" -maxdepth 1 -type f -delete
+
 # Push changes
 git add .
 git commit -m "$3"
